# ddf-toolkit

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci.yml  claude-review.yml  release.yml
docs/: architecture.md  bridge-templates.md  bridge.md  captures-research.md  cli-reference.md  ddf-schema.md  formula-coverage.md  interpreter.md  simulator.md
docs/internal/: SPRINT_0_AMENDMENTS.md  SPRINT_0_PRD.md  SPRINT_0_STATUS.md  SPRINT_1_AMENDMENTS.md  SPRINT_1_PRD.md  SPRINT_2_AMENDMENTS.md  SPRINT_2_PRD.md
examples/: README.md  walkthrough.md
scripts/: audit_formulas.py
src/ddf_toolkit/: __init__.py  cli.py  serializer.py
src/ddf_toolkit/bridge/: __init__.py  anonymizer.py  builder.py  grouper.py  ha_source.py  models.py  pipeline.py
src/ddf_toolkit/formula/: __init__.py  ast.py  evaluator.py  lexer.py  parser.py
src/ddf_toolkit/golden/: __init__.py  runner.py
src/ddf_toolkit/interpreter/: __init__.py  environment.py  evaluator.py
src/ddf_toolkit/linter/: __init__.py  reporter.py  rules.py
src/ddf_toolkit/parser/: __init__.py  ast.py  lexer.py  parser.py
src/ddf_toolkit/signing/: __init__.py  keys.py  sign.py  verify.py
src/ddf_toolkit/simulator/: __init__.py  har_loader.py  mock_server.py  runner.py
tests/fixtures/captures/: daikin_stylish_error_response.har  daikin_stylish_set_mode.har  daikin_stylish_status_poll.har  ha_states_endpoint.har  (+3 more)
tests/integration/: test_bridge_e2e.py
tests/unit/: test_builder.py  test_cli.py  test_environment.py  test_formula_lexer.py  test_formula_parser.py  test_golden.py  test_ha_source.py  test_har_loader.py  test_interpreter.py  test_lexer.py  test_linter.py  test_parser.py  test_pipeline.py  test_runner.py  test_serializer.py  test_signing.py  test_templates.py
(+20 files in other folders)
